--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "axios": "^0.20.0",
+    "bcrypt": "^5.0.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-plugin-react": "7.20.0",
     "leaflet": "^1.7.1",
