--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.20.0",
     "bcrypt": "^5.0.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -26,7 +28,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^8.3.1",
+    "uuidv4": "^6.2.4",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@types/yup": "^0.29.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.12.0",
